[gd_scene load_steps=2 format=3 uid="uid://ceh37ktdjquqn"]

[ext_resource type="Script" uid="uid://iuufp1qdfe26" path="res://scripts/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="GameTitle" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="PlayButton" type="TextureButton" parent="ButtonContainer"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2

[node name="SettingsButton" type="TextureButton" parent="ButtonContainer"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="ButtonContainer"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[connection signal="pressed" from="ButtonContainer/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ButtonContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonContainer/ExitButton" to="." method="_on_exit_pressed"]
